--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "base.instore",
+  "name": "indevaclients.instore",
   "version": "1.0.0",
   "private": true,
-  "description": "Base inStore",
+  "description": "indevaclients inStore",
   "author": "Guilherme Bruzzi",
   "keywords": [
     "gatsby",
